--- a/linstor/tasks/main.yml
+++ b/linstor/tasks/main.yml
@@ -34,8 +34,9 @@
     dest: /etc/linstor/linstor-client.conf
   tags: install
 
-#- name: sleep for 30 seconds and continue with play
-#  wait_for: timeout=30
+- name: sleep for 30 seconds and continue with play
+  wait_for: timeout=30
+  tags: install
 
 #- debug:
 #    msg: |
@@ -47,5 +48,9 @@
   shell: linstor node create {{ ansible_nodename }} {{ ansible_all_ipv4_addresses | ipaddr(drbd_replication_network) | first }} --node-type {% if 'linstor_satellites' not in group_names %}Controller{% else %}Combined{% endif %}
   register: linstor_create_result
   failed_when: ( linstor_create_result.rc not in [ 0, 10 ] )
+  tags: deploy
 
-- shell: linstor node list
+- debug:
+    msg: |
+      {{ lookup('pipe', 'linstor node list') }}
+  tags: deploy
