Created Linstor-CSI deployment Ansible tasks and variables

--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -6,3 +6,5 @@ os_packages:
   - linstor-controller
   - linstor-satellite
   - linstor-client
+
+linstor_cotroller_ip: "http://linstor-controller.example.com:3370"
