set pool size to 100%FREE instead of 100%VG; Updated README

--- a/linstor/tasks/storage-pool.yml
+++ b/linstor/tasks/storage-pool.yml
@@ -34,7 +34,7 @@
     lvol:
       vg: "{{ pool_name }}"
       thinpool: "{{ item.name }}"
-      size: "{{ item.size | d('100%VG') }}"
+      size: "{{ item.size | d('100%FREE') }}"
       opts: -Zn
 
   - name: Create the linstor storage pool
