fixed csi deployment task

--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -7,4 +7,4 @@ os_packages:
   - linstor-satellite
   - linstor-client
 
-linstor_cotroller_ip: "http://linstor-controller.example.com:3370"
+#linstor_cotroller_ip: "http://linstor-controller.example.com:3370"
