--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -8,3 +8,16 @@ os_packages:
   - linstor-client
 
 #linstor_cotroller_ip: "http://linstor-controller.example.com:3370"
+
+# quay.io/k8scsi/csi-provisioner
+csi_provisioner_tag: v1.5.0
+# quay.io/k8scsi/csi-attacher
+csi_attacher_tag: v2.1.1
+# quay.io/k8scsi/csi-resizer
+csi_resizer_tag: v0.5.0
+# quay.io/k8scsi/csi-snapshotter
+csi_snapshotter_tag: v2.0.1
+# quay.io/piraeusdatastore/piraeus-csi
+linstor_csi_plugin_tag: v0.9.1
+# quay.io/k8scsi/csi-node-driver-registrar
+csi_node_driver_registrar_tag: v1.2.0
