Fix for the case when controllers are not on all nodes

--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -6,12 +6,14 @@ os_packages:
     - lsscsi
     - lvm2
     - nvme-cli
-    linstor:
+    common:
     - drbd-dkms=9.0.29-1ppa1~focal1
     - drbd-utils=9.18.0-1ppa1~focal1
-    - linstor-controller=1.13.0-1ppa1~focal1
-    - linstor-satellite=1.13.0-1ppa1~focal1
     - linstor-client=1.8.0-1ppa1~focal1
+    controller:
+    - linstor-controller=1.13.0-1ppa1~focal1
+    satellite:
+    - linstor-satellite=1.13.0-1ppa1~focal1
 
 vg_name: linvg
 filethin_base_path: /var/lib/linstor
