--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -15,11 +15,11 @@ os_packages:
     common:
     - drbd-dkms=9.1.3-1ppa1~focal1
     - drbd-utils=9.18.2-1ppa1~focal1
-    - linstor-client=1.9.0-1ppa1~focal1
+    - linstor-client=1.10.0-1ppa1~focal1
     controller:
-    - linstor-controller=1.14.0-1ppa1~focal1
+    - linstor-controller=1.15.0~rc.1-1ppa1~focal1
     satellite:
-    - linstor-satellite=1.14.0-1ppa1~focal1
+    - linstor-satellite=1.15.0~rc.1-1ppa1~focal1
 
 vg_name: linvg
 filethin_base_path: /var/lib/linstor
