--- a/linstor/tasks/etcd-config.yml
+++ b/linstor/tasks/etcd-config.yml
@@ -14,7 +14,7 @@
       msg: _etcd_hosts "{{ _etcd_hosts }}"
 
   - set_fact:
-      linstor_db_connection_url: "etcd://{% for node in groups['nodes'] %}{% if hostvars[node]['_etcd_hosts'] | d('') | length %}{{ hostvars[node]['_etcd_hosts'] }}{% if not loop.last %},{% endif %}{% endif %}{% endfor %}"
+      linstor_db_connection_url: "etcd://{% for node in groups[etcd_group_name] %}{% if hostvars[node]['_etcd_hosts'] | d('') | length %}{{ hostvars[node]['_etcd_hosts'] }}{% if not loop.last %},{% endif %}{% endif %}{% endfor %}"
   when: linstor_db_connection_url is not defined
 
 - set_fact:
