--- a/linstor/defaults/main.yml
+++ b/linstor/defaults/main.yml
@@ -14,12 +14,12 @@ os_packages:
     - coccinelle=1.0.8~20.04npalix1
     common:
     - drbd-dkms=9.1.4-1ppa1~focal1
-    - drbd-utils=9.19.0-1ppa1~focal1
+    - drbd-utils=9.19.1-1ppa1~focal1
     - linstor-client=1.10.2-1ppa1~focal1
     controller:
-    - linstor-controller=1.16.0~rc.2-1ppa1~focal1
+    - linstor-controller=1.16.0-1ppa1~focal1
     satellite:
-    - linstor-satellite=1.16.0~rc.2-1ppa1~focal1
+    - linstor-satellite=1.16.0-1ppa1~focal1
 
 vg_name: linvg
 filethin_base_path: /var/lib/linstor
