--- a/linstor/tasks/storage-pool.yml
+++ b/linstor/tasks/storage-pool.yml
@@ -10,7 +10,8 @@
   - name: Create the linstor storage pool '{{ pool.name }}'
     shell: linstor storage-pool create {{ pool.type }} {{ ansible_nodename }} {{ pool.name }} {{ pool.base_path | d(filethin_base_path) }}/{{ pool.name }}
     register: storage_pool_create_result
-    failed_when: ( storage_pool_create_result.rc not in [ 0, 10 ] )
+    failed_when: ( storage_pool_create_result.rc not in [ 0 ] )
+    ignore_errors: yes
 
 
 - tags: storage
@@ -42,4 +43,5 @@
   - name: Create the linstor storage pool '{{ pool.name }}'
     shell: linstor storage-pool create {{ pool.type }} {{ ansible_nodename }} {{ pool.name }} {{ _vg_name }}/{{ pool.name }}
     register: storage_pool_create_result
-    failed_when: ( storage_pool_create_result.rc not in [ 0, 10 ] )
+    failed_when: ( storage_pool_create_result.rc not in [ 0 ] )
+    ignore_errors: yes
